--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>YouTube</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -58,7 +58,15 @@
         </nav>
       </aside>
       <main class="main">
-        <h2>Здесь будут видео</h2>
+        <div class="chips">
+          <button class="chip active">Все</button>
+          <button class="chip">Музыка</button>
+          <button class="chip">Игры</button>
+          <button class="chip">Новости</button>
+          <button class="chip">Спорт</button>
+          <button class="chip">Образование</button>
+          <button class="chip">Технологии</button>
+        </div>
       </main>
     </div>
   </body>
